src/objects/Functional__c.object
<CustomObject>
    <customHelpPage>Help_CAP_Functional_Domain_Summaries_VF</customHelpPage>
    <fields>
        <fullName>Assesor_Role__c</fullName>
        <encrypted>true</encrypted>
        <label>Profession of Assessor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <encrypted>true</encrypted>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessor_First_Name__c</fullName>
        <defaultValue>$User.FirstName</defaultValue>
        <encrypted>true</encrypted>
        <label>Assessor First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Last_Name__c</fullName>
        <defaultValue>$User.LastName</defaultValue>
        <encrypted>true</encrypted>
        <label>Assessor Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Name__c</fullName>
        <description>The name of the person who performed the assessment</description>
        <encrypted>true</encrypted>
        <label>Assessor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Name_formula__c</fullName>
        <formula>Assessor_First_Name__c &amp; &quot; &quot; &amp; Assessor_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CAP - Functional Domain Summaries</relationshipLabel>
        <relationshipName>Functional_Domains</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cross_Reference_Domain_s__c</fullName>
        <label>Cross-Reference Domain(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Physical Functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Living Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Participation Skills &amp; Social Incl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Interaction &amp; Self-Determination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Styles and Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language and Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason and Decision-Making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavioral and Emotional Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health: Diagnostic Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Space Only</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>TEXT(YEAR(Case__r.Contact.Birthdate)) + &quot;/&quot; + TEXT(MONTH(Case__r.Contact.Birthdate)) + &quot;/&quot; + TEXT(DAY(Case__r.Contact.Birthdate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Domain_Type_For_Print__c</fullName>
        <description>Created this to use in the drop down list.</description>
        <label>Functional Domain Type</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Living Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Participation Skills and Social Inclusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Interaction and Self-Determination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Styles and Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language and Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason and Decision-Making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavioral and Emotional Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health: Diagnostic Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Space Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Functional_Domain_Type__c</fullName>
        <label>Functional Domain Type</label>
        <picklist>
            <picklistValues>
                <fullName>Physical Functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Living Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Participation Skills and Social Inclusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Interaction and Self-Determination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Styles and Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language and Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason and Decision-Making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavioral and Emotional Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health: Diagnostic Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Space Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Name__c</fullName>
        <formula>Case__r.Contact.FirstName + &quot; &quot; +  Case__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_FD_Update__c</fullName>
        <label>Last FD Update</label>
        <summarizedField>Functional_Domain_Update__c.CreatedDate</summarizedField>
        <summaryForeignKey>Functional_Domain_Update__c.Functional_Domain__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <formula>IF(ISBLANK(Last_FD_Update__c), CreatedDate, Last_FD_Update__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Functional_Domain__c</fullName>
        <label>Other Functional Domain</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <encrypted>true</encrypted>
        <label>Functional Domain Summary Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Functional Domain Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FD-{0000000}</displayFormat>
        <label>Functional Domain Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Functional Domain Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Functional_domain_other</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( Functional_Domain_Type__c , &apos;Other&apos;),ISBLANK( Other_Functional_Domain__c ))</errorConditionFormula>
        <errorDisplayField>Other_Functional_Domain__c</errorDisplayField>
        <errorMessage>Please enter a value for other Functional Domain</errorMessage>
    </validationRules>
</CustomObject>